[package]
name = "rig-google-sheets"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
mcp-core = { version = "0.1.43", features = ["sse"] }
rig-core = { version = "0.11.0", features = ["mcp"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
